# numinous

./: .gitignore  README.md  pyproject.toml
elixir/: mix.exs
elixir/_build/dev/lib/jason/.mix/: compile.app_tracer  compile.elixir
elixir/_build/dev/lib/jason/ebin/: Elixir.Enumerable.Jason.OrderedObject.beam  Elixir.Jason.Codegen.beam  Elixir.Jason.DecodeError.beam  Elixir.Jason.Decoder.Unescape.beam  Elixir.Jason.Decoder.beam  Elixir.Jason.Encode.beam  Elixir.Jason.EncodeError.beam  Elixir.Jason.Encoder.Any.beam  Elixir.Jason.Encoder.Atom.beam  Elixir.Jason.Encoder.BitString.beam  Elixir.Jason.Encoder.Date.beam  Elixir.Jason.Encoder.DateTime.beam  Elixir.Jason.Encoder.Float.beam  Elixir.Jason.Encoder.Integer.beam  Elixir.Jason.Encoder.Jason.Fragment.beam  Elixir.Jason.Encoder.Jason.OrderedObject.beam  Elixir.Jason.Encoder.List.beam  Elixir.Jason.Encoder.Map.beam  Elixir.Jason.Encoder.NaiveDateTime.beam  Elixir.Jason.Encoder.Time.beam  Elixir.Jason.Encoder.beam  Elixir.Jason.Formatter.beam  Elixir.Jason.Fragment.beam  Elixir.Jason.Helpers.beam  Elixir.Jason.OrderedObject.beam  Elixir.Jason.Sigil.beam  Elixir.Jason.beam
elixir/config/: config.exs
elixir/lib/: numinous.ex
elixir/lib/mix/tasks/: numinous.name.ex  numinous.open.ex
elixir/lib/numinous/: api.ex  application.ex  field.ex  manifold_client.ex  memory.ex  reach_bridge.ex  scout.ex  void.ex
elixir/test/: numinous_test.exs
numinous/: __init__.py  bridge.py  crypto_reach.py  reach.py
numinous.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_reach.py
(+8 files in other folders)
