[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "numinous"
version = "0.1.0"
description = "The ground the mesh floats in."
requires-python = ">=3.11"
dependencies = [
    "manifold-mesh @ git+https://github.com/stellamariesays/Manifold.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["numinous*"]
